<resources>
    <string name="app_name">IoT Rec</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_things">Things</string>
    <string name="title_settings">Settings</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_thing_list">Things</string>
    <string name="title_thing_detail">Thing</string>
    <string name="welcome">"Welcome"</string>
    <string name="notification_channel_id_service">NOTIFICATION_CHANNEL_SERVICE</string>
    <string name="notification_channel_name_service">Service</string>
    <string name="notification_channel_description_service">Persistent notifications for services</string>
    <string name="title_profile">Profile</string>

    <!-- login and signup -->
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Repeat Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_go_to_signup">Don\'t have an account yet?\nSign up now</string>
    <string name="action_back_to_login">Back to Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_logout">Log out</string>
    <string name="action_go_to_login">Log in now</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="login_failed">"Login failed. Please check username and password."</string>
    <string name="signup_failed">"Signup failed. The username or email address may already be in use."</string>
    <string name="not_logged_in">You\'re not logged in.</string>

    <string name="network_failed">Network connection failed. Are you online? Is the backend online?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
