<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_things"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_things"/>

    <item
            android:id="@+id/navigation_preferences"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_preferences"/>

    <!--
    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_settings"/>
    -->

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_profile"/>

</menu>
