<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        tools:context=".app.ProfileFragment"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingLeft="0dp"
                        android:paddingBottom="64dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" >

                        <TextView
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginTop="0dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:text="username"
                                android:textSize="48sp"
                                android:fontFamily="sans-serif-thin" />

                        <TextView
                                android:id="@+id/email_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:text="Email Address"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:visibility="gone"
                                tools:visibility="visible"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/username" />

                        <TextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginTop="0dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/email_header"
                                tools:text="example@example.com"
                                android:textSize="18sp"/>

                        <TextView
                                android:id="@+id/preferences_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:text="Current Preferences"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:visibility="gone"
                                tools:visibility="visible"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/email" />

                        <TextView
                                android:id="@+id/preferences"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:textSize="18sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/preferences_header"
                                tools:text="Preference1\nPreference2\nPreference3" />

                        <TextView
                                android:visibility="gone"
                                android:id="@+id/not_logged_in"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:text="@string/not_logged_in"
                                tools:text="You're not logged in."
                                android:textSize="36sp"
                                android:fontFamily="sans-serif-thin" android:gravity="center"/>

                        <Button
                                android:visibility="gone"
                                android:id="@+id/go_to_login"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginBottom="8dp"
                                android:text="@string/action_go_to_login"
                                app:layout_constraintTop_toBottomOf="@+id/not_logged_in"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintVertical_bias="0.2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="8dp"
                        android:text="@string/action_logout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>